# ExtIO_RTL_h

./: .gitattributes  .gitmodules  .xgitmodules  CMakeLists.txt  ExtIO_RTL_dll_vs2010_sdk71.vcxproj  ExtIO_RTL_dll_vs2019.vcxproj  Makefile.mingw32  Makefile.mingw64  README.md
.github/workflows/: build.yml  build2.~yml  build3.~yml  build3.~~yml  build4.~yml  cmake.yml  publish.yml
res/: resource.h  resource.rc
src/: ExtIO_RTL.cpp  ExtIO_RTL.def  ExtIO_RTL.h  ExtIO_RTL.rc  LC_ExtIO_Types.h  config_file.cpp  config_file.h  control.h  control_tcp.cpp  dllmain.cpp  gui_dlg.cpp  gui_dlg.h  rates.cpp  rates.h  resource.h  tuners.cpp  tuners.h
